--- a/style/detalleDeProducto.css
+++ b/style/detalleDeProducto.css
@@ -51,6 +51,8 @@ body::-webkit-scrollbar {
 
 /* fin body */
 
+/* header */
+
 header {
   background: linear-gradient(to bottom, var(--primary), var(--background));
   width: 100%;
@@ -76,16 +78,17 @@ header .logo {
   display: none;
 }
 
+
 /*search*/
 
-#header .searchContainer {
+#header .searchContainer{
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-#header .searchContainer form {
+#header .searchContainer form{
   width: 300px;
   margin: 10px;
   padding: 10px;
@@ -97,7 +100,7 @@ header .logo {
   border: 1px solid var(--primari);
 }
 
-#header .searchContainer form input {
+#header .searchContainer form input{
   background: transparent;
   border: none;
   outline: none;
@@ -114,7 +117,7 @@ header .logo {
   /* padding: 3px; */
 }
 
-#header .searchContainer form button {
+#header .searchContainer form button{
   border: none;
   background: transparent;
   cursor: pointer;
@@ -123,19 +126,20 @@ header .logo {
   justify-content: center;
 }
 
-#header .searchContainer form button i {
+#header .searchContainer form button i{
   color: var(--primary);
   font-size: 1.6rem;
   /* margin: 0 10px 0 10px; */
   font-weight: 800;
 }
 
+
 /*carrito*/
 
 .cart {
   position: absolute;
-  top: 46px;
-  right: -28px;
+  top: 65px;
+  right: -13px;
   width: 360px;
   padding: 20px 30px;
   background: linear-gradient(to top, var(--primary), var(--background));
@@ -268,7 +272,7 @@ header .logo {
   font-size: 18px;
   border: none;
 }
-.btn-add a {
+.btn-add a{
   text-decoration: none;
   color: var(--text-white);
   font-weight: 400;
@@ -297,20 +301,20 @@ header .logo {
 }
 
 .navbar-list {
-  position: absolute;
-  top: 47px;
-  left: -227px;
-  width: 300px;
-  flex-direction: column;
-  background: linear-gradient(to top, var(--primary), var(--background));
-  border: 2px solid var(--electric);
-  border-top: 0px;
-  border-radius: 0px 0px 15px 15px;
-  align-items: flex-start;
-  padding: 45px 30px;
-  gap: 25px;
-  z-index: 2;
-  display: none;
+    position: absolute;
+    top: 47px;
+    left: -227px;
+    width: 300px;
+    flex-direction: column;
+    background: linear-gradient(to top, var(--primary), var(--background));
+    border: 2px solid var(--electric);
+    border-top: 0px;
+    border-radius: 0px 0px 15px 15px;
+    align-items: flex-start;
+    padding: 45px 30px;
+    gap: 25px;
+    z-index: 2;
+    display: none;
 }
 
 .navbar-list a {
@@ -324,12 +328,22 @@ header .logo {
   font-weight: 600;
 }
 
-/* Mostramos el icono del menu */
-.menu-label {
+ /* Mostramos el icono del menu */
+ .menu-label {
   display: flex;
   order: 2;
   cursor: pointer;
 }
+
+.menu-label img {
+  height: 20px;
+  width: 25px;
+}
+
+#menu-toggle:checked + .navbar-list {
+  display: flex;
+}
+
 
 .menu-label img {
   height: 20px;
@@ -367,7 +381,12 @@ header .logo {
   transition: transform 0.15s ease;
 }
 
-#iniciarSesion {
+.navbar-list li a:hover::after {
+  transform-origin: bottom left;
+  transform: scaleX(1);
+}
+
+#iniciarSesion{
   background-color: var(--btn-bg);
   border-radius: 10px;
   height: 40px;
@@ -378,20 +397,24 @@ header .logo {
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
-#iniciarSesion a {
+#iniciarSesion a{
   font-size: 2rem;
   color: var(--bg-white);
+
 }
 
-#iniciarSesion:hover {
+#iniciarSesion:hover{
   background-color: var(--fire);
   transition: all 0.3s ease-in-out;
   cursor: pointer;
 }
 
+
 /*fin header*/
+
 
 /* main */
 
@@ -458,7 +481,7 @@ main .conteinerTEXT h2 {
   color: var(--background);
 }
 
-main .conteinerTEXT .starIcon{
+main .conteinerTEXT .starIcon {
   color: var(--fire);
   font-size: 1.9rem;
 }
@@ -496,19 +519,19 @@ main .conteinerTEXT .precio p {
   top: 16px; */
 }
 
-main .conteinerTEXT .conteinerDescripcion{
+main .conteinerTEXT .conteinerDescripcion {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
-main .conteinerTEXT .conteinerDescripcion h3{
+main .conteinerTEXT .conteinerDescripcion h3 {
   font-size: 2rem;
   font-weight: bold;
 }
 
-main .conteinerTEXT .conteinerDescripcion p{
+main .conteinerTEXT .conteinerDescripcion p {
   font-size: 1.4rem;
   font-weight: 500;
 }
@@ -561,6 +584,209 @@ main .conteinerTEXT .conteinerButton:hover {
   background-color: var(--fire);
   transition: all 0.3s ease-in-out;
   cursor: pointer;
+}
+
+main #comentariosClientes {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  padding: 10px;
+  margin: 10px;
+  align-items: center;
+  border-radius: 12px;
+}
+
+main #comentariosClientes h2 {
+  font-size: 2.3rem;
+  font-weight: 600;
+}
+
+main #comentariosClientes .puntuaje {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  margin: 10px;
+  background: var(--bg-white);
+  border-radius: 12px;
+}
+main #comentariosClientes .puntuaje h2 {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.starPuntuaje {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: flex-start;
+  padding-left: 15px;
+}
+
+
+.calificaciones{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.starPuntuaje i{
+  color: var(--fire);
+  font-size: 1.7rem;
+}
+
+.starPuntuaje p{
+  font-style: 2rem;
+  font-weight: 700;
+}
+
+.conteinerCaracteristicas{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  /* border-top: 1px solid var(--background); */
+}
+
+.caracteristicas{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.caracteristicas p{
+  font-size: 1.3rem;
+  font-weight: 700;
+}
+
+.caracteristicas i{
+  color: var(--fire);
+  font-size: 1.3rem;
+}
+
+.conteinerCaracteristicas a{
+  /* text-decoration: none; */
+  color: var(--background);
+  font-weight: 700;
+  font-size: 1.3rem;
+}
+
+.comentariosConteiner{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 10px;
+  margin: 5px;
+  background: var(--bg-white);
+  border-radius: 12px;
+}
+
+.comentariosDestacados{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.comentariosDestacados h3{
+  font-size: 1.6rem;
+  font-weight: 700;
+}
+
+.comentariosDestacados a{
+  text-decoration: none;
+  background: var(--btn-bg);
+  color: var(--bg-white);
+  padding: 8px;
+  border-radius: 12px;
+  font-weight: 700;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.comentariosDestacados a:hover{
+  background: var(--fire);
+  transition: all 0.3s ease-in-out;
+}
+
+.puntuajeUser{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.puntuajeUser .conteinerStar{
+  color: var(--fire);
+  font-weight: 800;
+  font-size: 1rem;
+}
+
+.puntuajeUser p{
+  font-size: 1.1rem;
+  font-weight: 700;
+}
+
+.comentarios p{
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.likeConteiner{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.likeConteiner p{
+  border: 1px solid var(--background);
+  border-radius: 15px;
+  padding: 5px;
+  font-weight: 500;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.likeConteiner p:hover{
+  background: var(--fire);
+  transition: all 0.3s ease-in-out;
+  border: 1px solid var(--fire);
+}
+
+.likeConteiner i{
+  font-size: 1.2rem;
+}
+
+.conteinerP{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.conteinerP a{
+  border: 1px solid var(--background);
+  color: var(--background);
+  text-decoration: none;
+  padding: 7px;
+  border-radius: 8px;
+  font-weight: 700;
+  font-size: 1.3rem;
+  cursor: pointer;
+}
+
+.conteinerP a:hover{
+  background: var(--fire);
+  transition: all 0.3s ease-in-out;
+  border: 1px solid var(--fire);
 }
 
 /* fin main */
@@ -741,7 +967,8 @@ footer ::placeholder {
 @media (min-width: 768px) {
   #iniciarSesion {
     height: 60px;
-    width: 150px;
+    /* width: 90px; */
+    padding: 5px;
     font-size: 1.5rem;
     font-weight: 600;
   }
@@ -792,26 +1019,49 @@ footer ::placeholder {
     width: 100%;
   }
 
-  main .conteinerDetalle{
+  main .conteinerDetalle {
     flex-direction: row;
     justify-content: center;
   }
 
-  main .conteinerDetalle .conteinerIMG{
+  main .conteinerDetalle .conteinerIMG {
     max-width: 400px;
   }
- 
-}
-
-@media (min-width: 768px) {
-  .navbar-list {
-    margin: 10px;
-  }
-  main .conteinerDetalle .conteinerIMG img{
+  main .conteinerDetalle .conteinerIMG img {
     width: 415px;
   }
-  main .conteinerDetalle .conteinerTEXT{
+  main .conteinerDetalle .conteinerTEXT {
     max-width: 584px;
   }
 
+  main #comentariosClientes{
+    flex-direction: row;
+    margin: 1px;
+    gap: 6px;
+    align-items: flex-start;
+  }
+
+.puntuaje{
+  width: 10%;
+  height: 100%;
+ 
+}
+
+.comentariosConteiner{
+  width: 90%;
+}
+
+}
+
+@media (min-width: 1024px) {
+  #iniciarSesion {
+    width: 130px;
+  }
+
+  .puntuaje{
+    width: 5%;
+  }
+  .comentariosConteiner{
+    width: 99%;
+  }
 }
