--- a/style/login.css
+++ b/style/login.css
@@ -409,7 +409,7 @@ header .logo {
   align-items: center;
   flex-direction: column;
   padding-top: 50px;
-  padding-bottom: 50px
+  padding-bottom: 50px;
 }
 .containerlogin {
   margin: 70px;
